dnl Process this file with autoconf to produce a configure script.
AC_INIT(jartool.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(RM, rm, /bin/rm, $PATH:/bin:/usr/bin:/usr/local/bin)
AC_PATH_PROG(CP, cp, /bin/cp, $PATH:/bin:/usr/bin:/usr/local/bin)
AC_PATH_PROG(STRIP, strip, /usr/bin/strip, $PATH:/bin:/usr/bin:/usr/local/bin)
AC_PATH_PROG(CHMOD, chmod, /bin/chmod, $PATH:/bin:/usr/bin:/usr/local/bin)

dnl Checks for libraries.
AC_CHECK_LIB(z, deflate, ,exit)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_STRUCT_TM
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_OFF_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNC(deflate,,exit)
AC_CHECK_FUNC(crc32,,exit)
AC_CHECK_FUNC(deflateInit2_,,exit)
AC_CHECK_FUNC(deflateReset,,exit)
AC_CHECK_FUNC(deflateEnd,,exit)

dnl Check for type-widths
AC_CHECK_SIZEOF(char)
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)

AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile install-defs.sh)
